failed java/lang/Math/DivModTests.java after 6934604 changes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • b33

        It failed even with EliminateAutoBox switched off:

        bash-2.05b$ bin/java -d64 -version
        java version "1.8.0-ea-fastdebug"
        Java(TM) SE Runtime Environment (build 1.8.0-ea-fastdebug-b88)
        Java HotSpot(TM) 64-Bit Server VM (build 25.0-b32-internal-201305082235.vkozlov.6934604-fastdebug, mixed mode)
        bash-2.05b$ bin/java -d64 -XX:CICompilerCount=1 -Xcomp -XX:-EliminateAutoBox DivModTests
        FAIL: Math.floorMod(3, 3) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(2, 3) = 2 differs from Math.floor(x, y): 2
        FAIL: Math.floorMod(1, 3) = 1 differs from Math.floor(x, y): 1
        FAIL: Math.floorMod(0, 3) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(4, -3) = -2 differs from Math.floor(x, y): -2
        FAIL: Math.floorMod(3, -3) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(2, -3) = -1 differs from Math.floor(x, y): -1
        FAIL: Math.floorMod(1, -3) = -2 differs from Math.floor(x, y): -2
        FAIL: Math.floorMod(0, -3) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(-1, 3) = 2 differs from Math.floor(x, y): 2
        FAIL: Math.floorMod(-2, 3) = 1 differs from Math.floor(x, y): 1
        FAIL: Math.floorMod(-3, 3) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(-4, 3) = 2 differs from Math.floor(x, y): 2
        FAIL: Math.floorMod(-1, -3) = -1 differs from Math.floor(x, y): -1
        FAIL: Math.floorMod(-2, -3) = -2 differs from Math.floor(x, y): -2
        FAIL: Math.floorMod(-3, -3) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(-4, -3) = -1 differs from Math.floor(x, y): -1
        FAIL: Math.floorMod(2147483647, 1) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(2147483647, -1) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(2147483647, 3) = 1 differs from Math.floor(x, y): 1
        FAIL: Math.floorMod(2147483646, 3) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(-2147483648, 3) = 1 differs from Math.floor(x, y): 1
        FAIL: Math.floorMod(-2147483647, 3) = 2 differs from Math.floor(x, y): 2
        FAIL: Math.floorMod(-2147483647, -1) = 0 differs from Math.floor(x, y): 0
        FAIL: Math.floorMod(-2147483648, -1) = 0 differs from Math.floor(x, y): 0
        FAIL: Long.floorMod(4, 3) = 1 is different than BigDecimal result: 1
        FAIL: Long.floorMod(3, 3) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(2, 3) = 2 is different than BigDecimal result: 2
        FAIL: Long.floorMod(1, 3) = 1 is different than BigDecimal result: 1
        FAIL: Long.floorMod(0, 3) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(4, -3) = -2 is different than BigDecimal result: -2
        FAIL: Long.floorMod(3, -3) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(2, -3) = -1 is different than BigDecimal result: -1
        FAIL: Long.floorMod(1, -3) = -2 is different than BigDecimal result: -2
        FAIL: Long.floorMod(0, -3) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(-1, 3) = 2 is different than BigDecimal result: 2
        FAIL: Long.floorMod(-2, 3) = 1 is different than BigDecimal result: 1
        FAIL: Long.floorMod(-3, 3) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(-4, 3) = 2 is different than BigDecimal result: 2
        FAIL: Long.floorMod(-1, -3) = -1 is different than BigDecimal result: -1
        FAIL: Long.floorMod(-2, -3) = -2 is different than BigDecimal result: -2
        FAIL: Long.floorMod(-3, -3) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(-4, -3) = -1 is different than BigDecimal result: -1
        FAIL: Long.floorMod(9223372036854775807, 1) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(9223372036854775807, -1) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(9223372036854775807, 3) = 1 is different than BigDecimal result: 1
        FAIL: Long.floorMod(9223372036854775806, 3) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(-9223372036854775808, 3) = 1 is different than BigDecimal result: 1
        FAIL: Long.floorMod(-9223372036854775807, 3) = 2 is different than BigDecimal result: 2
        FAIL: Long.floorMod(-9223372036854775807, -1) = 0 is different than BigDecimal result: 0
        FAIL: Long.floorMod(-9223372036854775808, -1) = 0 is different than BigDecimal result: 0
        Exception in thread "main" java.lang.RuntimeException: 51 errors found in DivMod methods.
                at DivModTests.main(DivModTests.java:48)

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: