8014286: failed java/lang/Math/DivModTests.java after 6934604 changes

Corrected escape state for the result of boxing method. Added force inlining executed boxing methods.

Reviewed-by: twisti